--- a/latex/iteration2.tex
+++ b/latex/iteration2.tex
@@ -2,6 +2,17 @@
 
 \usepackage{standalone}
 \input{all_usepackages}
+
+% Sepia
+%\definecolor{myBGcolor}{HTML}{F6F0D6}
+%\definecolor{myTextcolor}{HTML}{4F452C}
+\usepackage[margin=1.25in]{geometry}
+\usepackage{xcolor}
+\definecolor{myBGcolor}{HTML}{3E3535}
+\definecolor{myTextcolor}{HTML}{CFECEC}
+\pagecolor{myBGcolor}
+\color{myTextcolor}
+
 %
 %
 %\title{Multi-GPU Solutions of Geophysical PDEs with Radial Basis Function-generated Finite Differences}
