Nearly done with MD

--- a/latex/iteration2.tex
+++ b/latex/iteration2.tex
@@ -3,15 +3,17 @@
 \usepackage{standalone}
 \input{all_usepackages}
 
-% Sepia
-%\definecolor{myBGcolor}{HTML}{F6F0D6}
-%\definecolor{myTextcolor}{HTML}{4F452C}
 \usepackage[margin=1.25in]{geometry}
 \usepackage{xcolor}
-\definecolor{myBGcolor}{HTML}{3E3535}
-\definecolor{myTextcolor}{HTML}{CFECEC}
+
+% Sepia
+\definecolor{myBGcolor}{HTML}{F6F0D6}
+\definecolor{myTextcolor}{HTML}{4F452C}
+% Dark
+%\definecolor{myBGcolor}{HTML}{3E3535}
+%\definecolor{myTextcolor}{HTML}{CFECEC}
 \pagecolor{myBGcolor}
-\color{myTextcolor}
+%\color{myTextcolor}
 
 %
 %
