--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,19 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-05-27 21:54:54 -0500 
+%% Created for Evan Bollig at 2013-06-14 05:26:35 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{Womersley2001,
+	Author = {Robert S. Womersley and Ian H Sloan},
+	Date-Added = {2013-06-14 10:24:04 +0000},
+	Date-Modified = {2013-06-14 10:26:35 +0000},
+	Title = {How Good can Polynomial Interpolation on the Sphere be?},
+	Year = {2001}}
 
 @book{Lapack1999,
 	Address = {Philadelphia, PA},
