Hash figures added

--- a/latex/publications.tex
+++ b/latex/publications.tex
@@ -21,7 +21,7 @@
         \item \bibentry{BolligAGU2011}              
         \item \bibentry{BolligMA2011}
 \end{itemize}
-TODO: add survey of goals stated in prospectus and whether they were completed or not (Probably part of slides, not actual dissertation)
+\authnote{add survey of goals stated in prospectus and whether they were completed or not (Probably part of slides, not actual dissertation)}
 
 
 
