Workign on hash figures

--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -1235,9 +1235,10 @@ has is to To quantify the sparsity of a Differentiation Matrix we consider the r
 
 \begin{figure}
 \centering
-\includegraphics[width=0.45\textwidth]{rbffd_methods_content/hashing/node_orderings.eps} \includegraphics[width=0.3\textwidth]{rbffd_methods_content/hashing/originalorder_regulargrid.eps} \\
+\includegraphics[width=0.65\textwidth]{rbffd_methods_content/hashing/node_orderings.eps} \\
+\includegraphics[width=0.45\textwidth]{rbffd_methods_content/hashing/originalorder_regulargrid.eps} \\
 \includegraphics[width=0.45\textwidth]{rbffd_methods_content/hashing/overlay_regulargrid.eps} \includegraphics[width=0.45\textwidth]{rbffd_methods_content/hashing/stencil_regulargrid.eps} \\
-\includegraphics[width=0.45\textwidth]{rbffd_methods_content/hashing/spy_regulargrid.eps} 
+\includegraphics[width=0.65\textwidth]{rbffd_methods_content/hashing/spy_regulargrid.eps} 
 \caption{In order: a) node ordering test cases; b) original ordering of regular grid (raster); c) coarse grid overlay for hash functions ($hnx = 6$); d) example stencil ($n=31$) spanning multiple Z's; e) spy of DM after orderings. }
 \label{fig:orderings}
 \end{figure}
