--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -1243,6 +1243,10 @@ has is to To quantify the sparsity of a Differentiation Matrix we consider the r
 \label{fig:orderings}
 \end{figure}
 
+%TODO: \cite{Indyk "Algorithms for Nearest Neighbor Search"} for reference on quad vs kd vs lsh
+%TODO: \cite{ChenChang "Neighbor-Finding Based on Space-Filling Curves"} 
+%TODO: \cite{Stocco and Schrack "On Spatial Orders and Location Codes"}
+
 
 
 
