Added new notes from discussion with Gordon

--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -1247,6 +1247,7 @@ has is to To quantify the sparsity of a Differentiation Matrix we consider the r
 %TODO: \cite{ChenChang "Neighbor-Finding Based on Space-Filling Curves"} 
 %TODO: \cite{Stocco and Schrack "On Spatial Orders and Location Codes"}
 
+Obviously, the ideal case for bandwidth is when all rows contain the $\frac{n}{2}$ nodes corresponding to solution value to either side of $u_j$. In 1-D this corresponds to every node containing the $\frac{n}{2}$ nodes to the left and right of $x_j$. In 2-D this is only possible if the nodes in the domain are properly indexed such that stencils contain the proper set of neighbors---a stringent requirement that will 
 
 
 
