--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -1243,11 +1243,20 @@ has is to To quantify the sparsity of a Differentiation Matrix we consider the r
 \label{fig:orderings}
 \end{figure}
 
+
+%TODO: get the compareKDTreeLSH.m output; this was for my C++ code and compared queries on 
+%\begin{figure}
+%\centering
+%\includegraphics[width=0.65\textwidth]{rbffd_methods_content/hashing/
+%\end{figure}
+
+
+
 %TODO: \cite{Indyk "Algorithms for Nearest Neighbor Search"} for reference on quad vs kd vs lsh
 %TODO: \cite{ChenChang "Neighbor-Finding Based on Space-Filling Curves"} 
 %TODO: \cite{Stocco and Schrack "On Spatial Orders and Location Codes"}
 
-Obviously, the ideal case for bandwidth is when all rows contain the $\frac{n}{2}$ nodes corresponding to solution value to either side of $u_j$. In 1-D this corresponds to every node containing the $\frac{n}{2}$ nodes to the left and right of $x_j$. In 2-D this is only possible if the nodes in the domain are properly indexed such that stencils contain the proper set of neighbors---a stringent requirement that will 
+Obviously, the ideal case for bandwidth is when all rows contain the $\frac{n}{2}$ nodes corresponding to solution value to either side of $u_j$. In 1-D this corresponds to every node containing the $\frac{n}{2}$ nodes to the left and right of $x_j$. In 2-D this is only possible if the nodes in the domain are properly indexed such that stencils contain the proper set of neighbors---a stringent requirement that will 
 
 
 
