--- a/latex/iteration2.tex
+++ b/latex/iteration2.tex
@@ -68,7 +68,7 @@
 \include{explicit_pde_solutions}
 \include{implicit_pde_solutions}
 
-
+\include{chapter3/distributed_solvers}
 
 %\include{performance_analysis} 
 %\include{ordering_and_preconditioning}
