Integrated matrix perspective of decomposition

--- a/latex/distributed_solver.tex
+++ b/latex/distributed_solver.tex
@@ -119,12 +119,20 @@ processor to left and right neighbors only, which simplifies parallel debugging.
 \end{center}
 \end{figure}
 
+\begin{figure}[ht!]
+\begin{center}
+\includegraphics[width=0.45\textwidth]{rbffd_methods_content/decompositions/MatrixDecompositionSets_RBF-FD_Bowed.pdf} 
+\caption{Decomposition for one processor selects a subset of rows from the DM. Blocks corresponding to node sets $\setCenters \backslash \setBoundary$, $\setProvide$, and $\setDepend$ are labeled for clarity. }
+\label{fig:decomp_matrix_view}
+\end{center}
+\end{figure}
+
 
 \begin{figure}[ht!]
 \begin{center}
 \includegraphics[width=0.45\textwidth]{rbffd_methods_content/decompositions/spy_metis_stencil_example_labels.png}
 \includegraphics[width=0.45\textwidth]{rbffd_methods_content/decompositions/spy_metis_stencil_example_part_2_of_4.pdf}
-\caption{Spy of the sub-DM view on processor 2 of 4 from a METIS partitioning of $N=10,201$ nodes with stencil size $n=31$. Blocks are highlighted to distinguish node sets $\setCenters \backslash \setBoundary$, $\setProvide$, and $\setDepend$.}
+\caption{Spy of the sub-DM view on processor 2 of 4 from a METIS partitioning of $N=10,201$ nodes with stencil size $n=31$. Blocks are highlighted to distinguish node sets $\setCenters \backslash \setBoundary$, $\setProvide$, and $\setDepend$. Stencils involved in MPI communications have been permuted to the bottom of the matrix.}
 \label{fig:decomp_spy}
 \end{center}
 \end{figure}
