Got my scaling tests running on itasca to justify the distributed section

--- a/latex/distributed_solver.tex
+++ b/latex/distributed_solver.tex
@@ -239,6 +239,18 @@ As the set $\setDepend$ is received, the CPU converts back from global to local 
 		full mapping between RBF nodes and CPUs. 
 
 
+\subsection{Scaling}
+
+\authnote{Show the strong and weak scaling here}
+
+To demonstrate the effectiveness of our decomposition and indexing, we perform scaling experiments. 
+
+Strong scaling tests the growth in time for a fixed total problem size, and a variable number of processors. 
+
+Weak scaling considers the amount of time for a fixed problem size per process and variable number of processors. That is to say, each processor has roughly the same amount of work, so as we scale to a large number of processors, changes in time will be the result of increased communication overhead. 
+
+We consider a simple idealized problem where derivatives are computed over a regular grid generated in 3-D. The experiment computes the SpMV one thousand times. At the end of each SpMV the MPI_Alltoallv collective is used to synchronize the local derivative vectors. After one thousand iterations, each process computes the local norm of the resulting vector and an MPI_Reduce collective dra
+
 
 \section{Two level parallelism}
 
